--- a/docs/tutorial-basics/markdown-features.mdx
+++ b/docs/tutorial-basics/markdown-features.mdx
@@ -4,19 +4,9 @@ sidebar_position: 4
 
 # Markdown Features
 
-```mdx-code-block
-import LiteYouTubeEmbed from 'react-lite-youtube-embed';
+<Highlight color="#25c2a0">Docusaurus green</Highlight> and <Highlight color="#1877F2">Facebook blue</Highlight> are my favorite colors.
 
-<div className="video-container">
-  <LiteYouTubeEmbed
-    id="Yhyx7otSksg"
-    params="autoplay=1&autohide=1&showinfo=0&rel=0"
-    title="Docusaurus: Documentation Made Easy"
-    poster="maxresdefault"
-    webp
-  />
-</div>
-```
+I can write **Markdown** alongside my _JSX_!
 
 Docusaurus supports **[Markdown](https://daringfireball.net/projects/markdown/syntax)** and a few **additional features**.
 
@@ -162,3 +152,47 @@ export const Highlight = ({children, color}) => (
 This is <Highlight color="#25c2a0">Docusaurus green</Highlight> !
 
 This is <Highlight color="#1877F2">Facebook blue</Highlight> !
+
+
+export const CodePen = () => (
+<iframe height="300" scrolling="no" title="123" src="https://codepen.io/S7245/embed/poORXYv?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true" style = {{width: '100%'}}> 
+  See the Pen <a href="https://codepen.io/S7245/pen/poORXYv">
+  123</a> by Sam (<a href="https://codepen.io/S7245">@S7245</a>)
+  on <a href="https://codepen.io">CodePen</a>.
+</iframe>
+);
+
+<CodePen/>
+
+
+
+|A|B|C|
+|-|--|--|
+|A|B|micromark-extension-mdxjs-esmmicromark-extension-mdxjs-esmmicromark-extension-mdxjs-esmmicromark-extension-mdxjs-esmmicromark-extension-mdxjs-esm|
+
+
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+<Tabs>
+  <TabItem value="apple" label="Apple" default>
+    This is an apple 🍎
+  </TabItem>
+  <TabItem value="orange" label="Orange">
+    This is an orange 🍊
+  </TabItem>
+  <TabItem value="banana" label="Banana">
+    This is a banana 🍌
+  </TabItem>
+</Tabs>
+
+
+| header1          | header2          |
+| ---------------- | ---------------- |
+| cell (rowspan=2) | cell             |
+| ^                | cell             |
+| >                | cell (colspan=2) |
+| escape >         | \>               |
+| escape ^         | \^               |
+
+
