--- a/docs/tutorial-basics/markdown-features.mdx
+++ b/docs/tutorial-basics/markdown-features.mdx
@@ -195,4 +195,6 @@ import TabItem from '@theme/TabItem';
 | escape >         | \>               |
 | escape ^         | \^               |
 
-
+```jsx
+https://stackblitz.com/edit/stackblitz-starters-zp2mbn?embed=1&file=src%2FApp.tsx
+```
