--- a/docs/tutorial-basics/markdown-features.mdx
+++ b/docs/tutorial-basics/markdown-features.mdx
@@ -198,3 +198,16 @@ import TabItem from '@theme/TabItem';
 ```jsx
 https://stackblitz.com/edit/stackblitz-starters-zp2mbn?embed=1&file=src%2FApp.tsx
 ```
+
+export const CodePen11 = () => (
+    <iframe src="https://codesandbox.io/embed/angry-grass-ly4rzn?fontsize=14&hidenavigation=1&theme=dark"
+        title="angry-grass-ly4rzn"
+        allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+        sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+        style = {{width: '100%',height: '500px',border: '0', overflow: 'hidden',borderRadius: '4px'}}
+    ></iframe>
+);
+
+<CodePen11/>
+
+border-radius: '4px',overflow: 'hidden'
