更新 2021-08-01-mdx-blog-post.mdx

--- a/blog/2021-08-01-mdx-blog-post.mdx
+++ b/blog/2021-08-01-mdx-blog-post.mdx
@@ -1,20 +1,8 @@
 ---
 slug: mdx-blog-post
-title: MDX Blog Post
+title: 吸引人才策略
 authors: [slorber]
-tags: [docusaurus]
+tags: [人才]
 ---
 
-Blog posts support [Docusaurus Markdown features](https://docusaurus.io/docs/markdown-features), such as [MDX](https://mdxjs.com/).
-
-:::tip
-
-Use the power of React to create interactive blog posts. This is a test input.
-
-```js
-<button onClick={() => alert('button clicked!')}>Click me!</button>
-```
-
-<button onClick={() => alert('button clicked!')}>Click me!</button>
-
-:::
+> 如果做到足够的资本，可以参考华为公司，设立奖金和项目进行比赛，筛选人才，同时为自己的项目提供解决方案。
