--- a/blog/2021-08-01-mdx-blog-post.mdx
+++ b/blog/2021-08-01-mdx-blog-post.mdx
@@ -8,6 +8,8 @@ tags: [人才]
 - [Linux安装nginx](https://www.cnblogs.com/java-six/p/17351201.html)
 - [centos7 安装 nginx](https://cloud.tencent.com/developer/article/2084551)
 
+[nginx官网地址](http://nginx.org/en/download.html)
+
 ```sh
 # 为了以后方便也可以这样
 sudo ln -s /usr/local/nginx/sbin/nginx /usr/bin/nginx
@@ -233,6 +235,11 @@ cat /etc/redhat-release
 # CentOS Linux release 7.9.2009 (Core)
 # 当前linux版本为centos 7.9
 ```
+
+## 配置SSL
+
+[参考](https://blog.csdn.net/weixin_43288858/article/details/118437535)
+
 
 > 如果做到足够的资本，可以参考华为公司，设立奖金和项目进行比赛，筛选人才，同时为自己的项目提供解决方案。
 
